# hzgl-image-processing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: convulution.frag  greyscale.frag  passthrough.frag  passthrough.vert
src/: main.cpp
src/hzgl/: Camera.cpp  Camera.hpp  Control.cpp  Control.hpp  Filesystem.cpp  Filesystem.hpp  Framebuffer.cpp  Framebuffer.hpp  Mesh.cpp  Mesh.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Timer.cpp  Timer.hpp
